# EyerVideoWand

./: .gitignore  README.md
EyerVideoWand/: .gitignore  CMakeLists.txt
EyerVideoWand/EyerVideoProcess/: CMakeLists.txt  EyerVPAudioRes.cpp  EyerVPAudioTrack.cpp  EyerVPResource.cpp  EyerVPVideoImage.cpp  EyerVPVideoRes.cpp  EyerVPVideoTrack.cpp  EyerVideoProcess.hpp
EyerVideoWand/EyerVideoProcessTest/: CMakeLists.txt  EyerVPAudioResTest.hpp  EyerVPAudioTrackTest.hpp  EyerVPReadImageTest.h  EyerVPVideoText.h  Test.cpp
EyerVideoWand/EyerWand/: CMakeLists.txt  EyerAudioFragment.cpp  EyerAudioLayer.cpp  EyerAudioTrack.cpp  EyerTransKey.cpp  EyerVideoDecoderLine.cpp  EyerVideoDecoderLine_.cpp  EyerVideoFragment.cpp  EyerVideoFragment.hpp  EyerVideoFragmentFrameSequential.cpp  EyerVideoFragmentText.cpp  EyerVideoFragmentVideo.cpp  EyerVideoLayer.cpp  EyerVideoLayer.hpp  EyerVideoLayout.cpp  EyerVideoPanel.cpp  EyerVideoTrack.cpp  EyerWand.cpp  EyerWand.hpp  EyerWandAV.hpp  EyerWandAudioResource.cpp  EyerWandBuilder.cpp  EyerWandContext.cpp  EyerWandContext.hpp  EyerWandDebug.cpp  EyerWandResource.cpp  EyerWandVideoResource.cpp  InterfaceC.cpp  InterfaceC.h  InterfaceCSharp.cpp  InterfaceCSharp.h
EyerVideoWand/EyerWand/Bitmap/: WandBitmap.hpp
EyerVideoWand/EyerWand/UIView/: WandTimeLine.cpp  WandTimeLineDrawEvent.cpp  WandTimeLineDrawEventList.cpp  WandTimeLineDrawEvent_Bitmap.cpp  WandTimeLineDrawEvent_BitmapSnapshot.cpp  WandTimeLineDrawEvent_Line.cpp  WandTimeLineDrawEvent_Rect.cpp  WandTimeLineDrawEvent_Text.cpp  WandUIView.hpp
EyerVideoWand/EyerWand/WandRenderTask/: LayerRenderTask.cpp  VideoTrackRenderTask.cpp  WandRenderTask.hpp
EyerVideoWand/EyerWandJni/: CMakeLists.txt  EyerWandJniAvReader.cpp  EyerWandJniContext.cpp  EyerWandJniCrop.cpp  EyerWandJniDrawEvent.cpp  EyerWandJniDrawEventBitmap.cpp  EyerWandJniDrawEventBitmapSnapshot.cpp  EyerWandJniDrawEventLine.cpp  EyerWandJniDrawEventRect.cpp  EyerWandJniDrawEventText.cpp  EyerWandJniLayer.cpp  EyerWandJniOGL.cpp  EyerWandJniRenderTask.cpp  EyerWandJniSnapshot.cpp  EyerWandJniTimeline.cpp  EyerWandJniVec.cpp  EyerWandJniVersion.cpp  com_eyer_eyer_wand_editor_lib_EyerWandNative.h
EyerVideoWand/EyerWandTest/: CMakeLists.txt  Main.cpp  wei.aac
EyerVideoWand/EyerWandTest_C/: CMakeLists.txt  Main.cpp
